# flick

./: .gitignore  CHANGELOG.md  Makefile  README.md  index.html  package.json  release-windows.cmd  vite.config.ts
.github/workflows/: release.yml
frontend/: capture.html  index.html  metadata.json  package.json  translation-window.html  vite.config.ts
frontend/src/: App.tsx  capture.css  capture.ts  index.css  languages.ts  main.tsx  translation-window.tsx  types.ts
frontend/src/components/: Sidebar.tsx  Toggle.tsx  TopBar.tsx  TranslationWidget.tsx  TranslationWindow.tsx
frontend/src/hooks/: useTypewriter.ts
frontend/src/i18n/: config.ts
frontend/src/i18n/locales/: en.ts  ja.ts  zh.ts
frontend/src/views/: AISettings.tsx  GeneralSettings.tsx  HistoryView.tsx  OCRSettings.tsx
scripts/: build-release-windows.ps1  build_macos_signed.sh  create_macos_self_signed_cert.sh  generate_icon_ico.py  generate_windows_taskbar_icon.py  open-release-windows.ps1
src/: capture.css  capture.ts  main.ts  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/native/: ocr-tool.swift
src-tauri/resources/ocr/onnx/: README.md
src-tauri/resources/ocr/paddle_ocr_v5_mobile/: README.md
src-tauri/src/: commands.rs  error.rs  lib.rs  main.rs  models.rs  services.rs
src-tauri/src/app/: linux_platform.rs  macos_hotkeys.rs  macos_permissions.rs  macos_platform.rs  mod.rs  platform.rs  platform_linux.rs  platform_macos.rs  platform_window.rs  windows.rs  windows_platform.rs
src-tauri/src/commands/: capture.rs  mod.rs  ocr.rs  settings.rs  translate_window.rs  translation.rs  widget.rs
src-tauri/src/features/: mod.rs  ocr.rs  translation.rs
src-tauri/src/features/capture/: history.rs  io.rs  mod.rs  platform.rs  session.rs
src-tauri/src/features/capture/platform/: linux_overlay_platform.rs  linux_platform.rs  linux_wayland_platform.rs  linux_x11_platform.rs  macos.rs  macos_core_graphics_backend.rs  macos_frozen_overlay.rs  macos_frozen_overlay_platform.rs  macos_nspanel_backend.rs  macos_overlay.rs  macos_platform.rs  macos_renderer.rs  non_macos.rs  windows_frozen_overlay_platform.rs  windows_overlay_platform.rs  windows_platform.rs
src-tauri/src/services/: mod.rs  ocr.rs  selected_text.rs  settings.rs  translation.rs  translation_history.rs
src-tauri/src/services/ai/: mod.rs  provider.rs
src-tauri/src/services/ai/protocol/: anthropic.rs  mod.rs  openai.rs
src-tauri/src/services/ocr/: macos_vision.rs  mock.rs  mod.rs  onnx.rs  paddle_ocr_v5_mobile.rs  vision.rs  windows_builtin.rs
src-tauri/src/services/screen_capture/: linux_platform.rs  linux_wayland_platform.rs  linux_x11_platform.rs  macos.rs  macos_frozen.rs  macos_frozen_platform.rs  macos_platform.rs  macos_screen_capture_kit.rs  mod.rs  non_macos.rs  windows_platform.rs
src-tauri/src/services/selected_text/: linux_platform.rs  macos_platform.rs  mod.rs  platform_macos.rs  platform_windows.rs  windows_platform.rs
src-tauri/src/services/tts/: edge.rs  mod.rs  playback.rs
