[package]
name = "flick-desktop"
version = "0.1.0"
edition = "2024"

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
anyhow = "1.0.100"
arboard = "3.6.1"
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["serde"] }
dirs = "6.0.0"
image = { version = "0.24.9", default-features = false, features = ["png"] }
rfd = "0.15.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
screenshots = "0.8.10"
sys-locale = "0.3.2"
tauri = { version = "2.10.3", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-autostart = "2.5.1"
tauri-plugin-global-shortcut = "2.3.1"
thiserror = "2.0.17"
uuid = { version = "1.18.1", features = ["v4", "serde"] }

[target."cfg(target_os = \"macos\")".dependencies]
core-foundation = "0.10.1"
core-graphics = "0.25.0"
foreign-types = "0.5.0"
objc2 = "0.6.4"
objc2-app-kit = { version = "0.3.2", features = ["NSColor", "NSPanel", "NSView", "NSResponder", "NSGraphicsContext", "NSWindow", "NSGraphics", "NSImage", "NSEvent", "NSWorkspace", "NSRunningApplication", "objc2-quartz-core"] }
objc2-foundation = "0.3.2"
objc2-quartz-core = "0.3.2"
screencapturekit = { version = "1.5.4", features = ["macos_15_2"] }
